# distillSR

./: .gitignore  README.md  better-web-converter.py  cli.py  export_onnx.py  inference.py  justfile  main.py  pyproject.toml  train.py  web-converter.py
archs/: __init__.py  base.py  dysample.py  factory.py  realplksr.py
archs/blocks/: common.py  conv.py  plk_block.py
archs/upsamplers/: __init__.py  dysample.py  factory.py  pixelshuffle.py
configs/: train_config.yaml  train_fast_config.yaml
docs/: adan-optimizer.md  checkpoint-management.md  data-engineering.md  gold-blur.md  gold-filter.md  gold-resize-compress.md  index.md  inference-tiling.md  loss-functions.md  mps-optimisations.md  quantize-and-export.md  registry-system.md  testing.md  training.md
loggers/: __init__.py  logger.py
pipeline/: degradations.py  fetch_hf.py  medallion_svc.py
tests/: conftest.py  test_benchmark.py
tests/images-output/: benchmark_results.json
training/: __init__.py  checkpoint.py  config.py  losses.py  metrics.py  progress.py  trainer.py
training/optimizer/: adan_sf.py
utils/: logger.py  metrics.py
